[project]
name = "py-wave-runup"
version = "0.1.11"
description = "Empirical wave runup models implemented in Python"
authors = [{ name = "Chris Leaman" }]
requires-python = ">3.12"
readme = "README.rst"
license = { text = "GPL-3.0+" }
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "joblib>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/chrisleaman/py-wave-runup"
Repository = "https://github.com/chrisleaman/py-wave-runup"
Documentation = "https://py-wave-runup.readthedocs.io"

[dependency-groups]
dev = [
    "coverage>=7.0",
    "codecov>=2.1",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "sphinx>=7.0",
    "sphinx-gallery>=0.16.0",
    "tox>=4.0",
    "tomlkit>=0.12.0",
    "black>=25.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_wave_runup"]
